--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -22,11 +22,7 @@ jobs:
                 node-version: '12.x'
             - name: Run app
               run: npm install
-            - name: Test 1
-              run: pwd
-            - name: Test workdir
-              run: ls /home/runner/work/jd_scripts-lxk0301/jd_scripts-lxk0301/
-            - run: node app.js
+            - run: node jd_bean_sign.js
               env:
                 JD_COOKIE: ${{ secrets.JD_COOKIE }}
                 JD_COOKIE_2: ${{ secrets.JD_COOKIE_2 }} 
