--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -3,7 +3,7 @@ name: Github JD-sign bot
 on:
     workflow_dispatch: # 手动触发
     schedule:
-        - cron: '15 16 * * *'
+        - cron: '15 22 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -24,4 +24,5 @@ jobs:
               env:
                 JD_COOKIE: ${{ secrets.JD_COOKIE }}
                 JD_COOKIE_2: ${{ secrets.JD_COOKIE_2 }} 
-                PUSH_KEY: ${{ secrets.PUSH_KEY }}
+                #PUSH_KEY: ${{ secrets.PUSH_KEY }}
+                TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
