--- a/.github/workflows/alert.yml
+++ b/.github/workflows/alert.yml
@@ -26,4 +26,5 @@ jobs:
                 JD_COOKIE: ${{ secrets.JD_COOKIE }}
                 JD_COOKIE_2: ${{ secrets.JD_COOKIE_2 }}
                 #PUSH_KEY: ${{ secrets.PUSH_KEY }}
-                TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+                TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN}}
+                TG_USER_ID: ${{ secrets.TG_USER_ID}}
